<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    android:layout_marginVertical="0dp"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_page_asset"
        android:contentDescription="@string/login_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/LoginPage_ET_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/usernameHint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:autofillHints=""/>

        <EditText
            android:id="@+id/LoginPage_ET_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:autofillHints=""/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"/>

            <TextView
                android:id="@+id/LoginPage_TV_forgotPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:textColor="@color/red"
                android:text="@string/forgot_pass" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/LoginPage_BTN_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/login"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LoginPage_TV_noAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account" />

            <TextView

                android:id="@+id/LoginPage_TV_registerNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/register_text"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>