<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/RequestFragment_image_blood"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@drawable/blood_image_request"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/login_image"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/RequestFragment_textView_nameDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nameText"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    android:layout_weight="3"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/RequestFragment_textView_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/RequestFragment_textView_dateDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    android:layout_weight="3"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/RequestFragment_textView_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/RequestFragment_textView_timedisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timeHint"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    android:layout_weight="3"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/RequestFragment_textView_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                android:id="@+id/RequestFragment_textView_status"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text=""
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:layout_weight="1"/>


        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>